--- a/app/src/main/res/layout/fragment_custom_tricks.xml
+++ b/app/src/main/res/layout/fragment_custom_tricks.xml
@@ -17,6 +17,7 @@
             android:layout_marginTop="8dp"
             android:text="S.K.A.T.E Dice"
             android:textAlignment="center"
+            android:textColor="@color/black"
             android:textSize="20sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
@@ -38,11 +39,15 @@
             app:layout_constraintTop_toBottomOf="@+id/lbl_diceTitle" />
 
         <Button
+            android:textAllCaps="false"
             android:id="@+id/btn_play"
             android:layout_width="wrap_content"
-            android:layout_height="0dp"
+            android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
+            android:background="@drawable/rounded_buttons"
             android:text="Play"
+            android:textColor="@color/white"
+            android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/txt_instructions" />
@@ -74,12 +79,16 @@
             app:layout_constraintStart_toStartOf="parent" />
 
         <Button
+            android:textAllCaps="false"
             android:id="@+id/btn_addTrick"
             android:layout_width="wrap_content"
-            android:layout_height="0dp"
+            android:layout_height="wrap_content"
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="8dp"
+            android:background="@drawable/rounded_buttons"
             android:text="Add Trick"
+            android:textColor="@color/white"
+            android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
 
